syntax = "proto3";

option go_package = "github.com/mqsrr/zylo/social-graph/proto;proto";

service UserProfileService {
  rpc GetProfilePicture (UserProfileRequest) returns (UserProfileResponse);
}

message UserProfileRequest {
  string user_id = 1;
}

message UserProfileResponse {
  string profile_picture_url = 1;
  string content_type = 2;
  string file_name = 3;
  int64 expires_in = 4;
}